--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -29,6 +29,10 @@
       %i (we need your current password to confirm your changes)
       %br/
       = f.password_field :current_password, autocomplete: "current-password", class: 'text'
+    .field 
+      = f.label :avatar, 'アイコン'
+      %br/
+      = f.file_field :avatar
     .actions
       = f.submit "Update", class: 'btn-third'
   %h3 Cancel my account
