--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,9 +10,12 @@
     = javascript_importmap_tags
   %body
     %header.header
+      %p.header_pageTitle 
+        = link_to 'Boards', root_path
       - if user_signed_in?
         .dropdown 
           .dropdown-content 
+            = link_to 'Account', edit_user_registration_path
             = link_to 'Log out', destroy_user_session_path, data: { turbo_method: 'delete' }
       - else
         = link_to 'Log in', new_user_session_path, class: 'header_loginBtn'
