--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -14,6 +14,14 @@ $avatar-size: 40px;
     padding: 12px 20px 12px;
   }
 
+  &_avatar {
+    width: $avatar-size;
+    height: $avatar-size;
+    border-radius: 100%;
+    cursor: pointer;
+    margin-top: 5px;
+  }
+
   &_loginBtn {
     background-color: $primary-color;
     border-radius: 10px;
