--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,14 +14,15 @@
         = link_to 'Boards', root_path
       - if user_signed_in?
         .dropdown 
+          = image_tag current_user.avatar_image, class: 'header_avatar dropbtn'
           .dropdown-content 
             = link_to 'Account', edit_user_registration_path
             = link_to 'Log out', destroy_user_session_path, data: { turbo_method: 'delete' }
       - else
         = link_to 'Log in', new_user_session_path, class: 'header_loginBtn'
-      - if flash.present?
-        .flash 
-          - flash.each do |key, value|
-            %div{:class => key}= value
+    - if flash.present?
+      .flash 
+        - flash.each do |key, value|
+          %div{:class => key}= value
     = yield
 
