ボードの一覧表示画面を作成

--- a/app/assets/stylesheets/commons.scss
+++ b/app/assets/stylesheets/commons.scss
@@ -26,6 +26,14 @@
       background-color: white;
     }
   }
+
+  &.mini {
+    min-width: 100px;
+
+    a {
+      font-size: 12px;
+    }
+  }
 }
 
 .dropdown:hover .dropdown-content {
