taskのnew画面を作成

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -30,3 +30,9 @@ textarea {
   background-color: $basic-bg-color;
   border-radius: 10px;
 }
+
+select {
+  margin-top: 10px;
+  background-color: $basic-bg-color;
+  border-radius: 10px;
+}
