titleのラベル名を変更

--- a/app/views/tasks/new.html.haml
+++ b/app/views/tasks/new.html.haml
@@ -5,7 +5,7 @@
   %h2 New Card
   = form_with(model: @task, url: board_tasks_path(@task.board), method: 'post', local: true) do |f|
     %div
-      = f.label :title, 'Name'
+      = f.label :title, 'Title'
     %div
       = f.text_field :title, class: 'text'
     %div
