taskにアイキャッチを追加できるようにした

--- a/app/views/tasks/new.html.haml
+++ b/app/views/tasks/new.html.haml
@@ -5,6 +5,10 @@
   %h2 New Card
   = form_with(model: @task, url: board_tasks_path(@task.board), method: 'post', local: true) do |f|
     %div
+      = f.label :eyecatch, 'eyecatch'
+    %div
+      = f.file_field :eyecatch, class: 'eyecatch'
+    %div
       = f.label :title, 'Title'
     %div
       = f.text_field :title, class: 'text'
