--- a/app/views/tasks/show.html.haml
+++ b/app/views/tasks/show.html.haml
@@ -9,7 +9,7 @@
         = image_tag 'Combined Shape.png', class: 'dropbtn'
         .dropdown-content.task_mini
           = link_to 'Edit', edit_board_task_path(@board, @task)
-          %a{:href => "#"} Delete
+          = link_to 'Delete', board_task_path(@board, @task), data: { turbo_method: 'delete', turbo_confirm: '本当に削除してもよろしいですか?' }
   - if @task.eyecatch.attached?
     .card_image 
       = image_tag @task.eyecatch
