--- a/app/views/tasks/show.html.haml
+++ b/app/views/tasks/show.html.haml
@@ -19,3 +19,6 @@
         = @task.description
         
   %h3.sub_title Comment
+  .comment_new
+    = link_to new_board_task_comment_path(@board, @task) do
+      %p + Add new comment
