投稿フォームのカラム名修正

--- a/app/views/comments/new.html.haml
+++ b/app/views/comments/new.html.haml
@@ -5,6 +5,6 @@
   %h2 New Comment
   = form_with(model: @comment, url: board_task_comments_path(@task.board, @task), local: true) do |f|
     %div
-      = f.text_area :description
+      = f.text_area :content
     %div
       = f.submit 'Save', class: 'comment_btn'
