--- a/app/assets/stylesheets/comment.scss
+++ b/app/assets/stylesheets/comment.scss
@@ -33,5 +33,16 @@
       opacity: 0.7;
     }
   }
+
+  &_detail {
+    display: flex;
+    justify-content: flex-start;
+  }
 }
 
+.icon {
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  margin: 6px 0 20px 8px;
+}
