--- a/app/assets/stylesheets/task.scss
+++ b/app/assets/stylesheets/task.scss
@@ -32,6 +32,12 @@
     font-size: 10px;
     line-height: 10px;
   }
+
+  &_comment {
+    font-size: 14px;
+    font-weight: 400;
+    margin: 10px 14px 20px;
+  }
 }
 
 .sub_title {
