--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -18,7 +18,7 @@
           .card_detail 
             = image_tag task.user.avatar_image, class: 'icon'
             .card_comment
-              %span= 23
+              %span= task.comment_count
               = image_tag 'comment-icon.png', class: 'comment-icon'
 
   .card_new
