--- a/app/views/boards/new.html.haml
+++ b/app/views/boards/new.html.haml
@@ -1,16 +1,5 @@
 .container
-  %ul
-    - @board.errors.full_messages.each do |message|
-      %li= message
   %h2 New Board
-  = form_with(model: @board, url: boards_path, method: 'post', local: true) do |f|
-    %div
-      = f.label :title, 'Name'
-    %div
-      = f.text_field :title, class: 'text'
-    %div
-      = f.label :description, 'Description'
-    %div
-      = f.text_area :description
-    %div
-      = f.submit 'Save', class: 'btn-primary'
+= render 'form', board: @board
+
+  
